# android-native-edge-detection

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/edgeviewer/: MainActivity.kt  YuvToRgbConverter.kt
app/src/main/java/com/example/edgeviewer/gl/: GLRenderer.kt  GLTextureRenderer.kt  Shader.kt
app/src/main/java/com/example/edgeviewer/ui/theme/: Theme.kt
app/src/main/res/values/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
